# fco-core

./: .gitignore  LICENSE  fco-core.cabal  stack.yaml
app/: Main.hs
data/test/: config-fco.yaml
src/Fco/Core/: Config.hs  Console.hs  Demo.hs  Messaging.hs  Parse.hs  Service.hs  Show.hs  Struct.hs  Types.hs  Util.hs
test/Fco/Core/: ParseSpec.hs  ServiceSpec.hs  ShowSpec.hs  StructSpec.hs  TestData.hs
