name:                 fco-core
version:              0.1.0.0
synopsis:             fco core modules, types and other common stuff
description:          Please see README.md
homepage:             https://github.com/cyberconcepts/fco-core
license:              MIT
license-file:         LICENSE
author:               functionalconcepts.org team
maintainer:           team@functionalconcepts.org
copyright:            2016 functionalconcepts.org team
category:             Semantic Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Fco.Core.Types
                      Data.String.Strip
  build-depends:      base >= 4.7 && < 5
                    , basic-prelude
                    , rdf4h
                    , ConfigFile
  default-language:   Haskell2010

test-suite fco-core-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , fco-core
                    , hspec
                    , QuickCheck
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-core
