name:                 fco-core
version:              0.2.0.1
synopsis:             fco core modules, types and other common stuff
description:          Please see README.md
homepage:             https://github.com/cyberconcepts/fco-core
license:              MIT
license-file:         LICENSE
author:               functionalconcepts.org team
maintainer:           team@functionalconcepts.org
copyright:            2019 functionalconcepts.org team
category:             Semantic Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Fco.Core.Config
                      Fco.Core.Console
                      Fco.Core.Demo
                      Fco.Core.Messaging
                      Fco.Core.Parse
                      Fco.Core.Service
                      Fco.Core.Show
                      Fco.Core.Struct
                      Fco.Core.Types
                      Fco.Core.Util
  build-depends:      base >= 4.7 && < 5
                    , basic-prelude
                    , aeson
                    , binary
                    , containers
                    , directory
                    , distributed-process
                    , distributed-process-simplelocalnet
                    , extra
                    , stm
                    , text
                    , unordered-containers
                    , yaml
                    --, rdf4h
                    --, ConfigFile
  default-language:   Haskell2010

executable fco-core-demo
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , fco-core
  default-language:   Haskell2010

test-suite fco-core-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      Fco.Core.ParseSpec
  other-modules:      Fco.Core.ServiceSpec
                      Fco.Core.ShowSpec
                      Fco.Core.StructSpec
                      Fco.Core.TestData
  main-is:            Spec.hs
  build-depends:      base
                    , basic-prelude
                    , fco-core
                    , hspec
                    , aeson
                    , unordered-containers
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-core
